# morphism-zoo

./: .travis.yml  COMPARE.md  README.md  bench8.0.txt  bench8.2.txt  benchnf8.0.txt  benchnf8.2.txt  default.nix  morphism-zoo.cabal  stack-8.0.yaml  stack-8.2.yaml  stack.yaml
bench/: Bench.hs  FibBench.hs  SuffixBench.hs  SuffixBenchLong.hs
julia/: factorial-bench.jl  fib-bench.jl  init.jl  suffixes.jl
python/: factorial-bench.py  fib-bench.py  python-suffix.py
results/: fib.html  fib8.0.txt  fib8.2.txt  suffix-extra8.0.txt  suffix-extra8.2.txt  suffix.html  suffix8.0.txt  suffix8.2.txt
rust/: .travis.yml  Cargo.toml  README.md
rust/.cargo/: config
rust/src/: lib.rs  test.rs
src/: Fact.hs  Fib.hs  Suffix.hs
test/: Spec.hs
