name:                morphism-zoo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vmchale/morphism-zoo#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2017 Vanessa McHale
--category:            Data
build-type:          Simple
extra-source-files:  README.md
                   , stack.yaml
                   , .travis.yml
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Suffix
  build-depends:       base >= 4.7 && < 5
                     , recursion-schemes
  default-language:    Haskell2010

test-suite morphism-zoo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , morphism-zoo
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark morphism-zoo-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             Bench.hs
  build-depends:       base
                     , morphism-zoo
                     , criterion
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/morphism-zoo
