name:                morphism-zoo
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/vmchale/morphism-zoo#readme
license:             BSD3
license-file:        LICENSE
author:              Vanessa McHale
maintainer:          vamchale@gmail.com
copyright:           Copyright: (c) 2017 Vanessa McHale
--category:            Data
build-type:          Simple
extra-source-files:  README.md
                   , stack.yaml
                   , .travis.yml
cabal-version:       >=1.10

Flag llvm {
  Description:         Use llvm optimization
  Default:             False
}

library
  hs-source-dirs:      src
  exposed-modules:     Suffix
                     , Fib
                     , PlusMinus
  build-depends:       base >= 4.7 && < 5
                     , recursion-schemes
  default-language:    Haskell2010

test-suite morphism-zoo-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , morphism-zoo
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded
  default-language:    Haskell2010

benchmark suffix-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             SuffixBench.hs
  build-depends:       base
                     , morphism-zoo
                     , criterion
  if flag(llvm)
    ghc-options:       -fllvm -optlo-O3 -O3
  ghc-options:         -O2
  default-language:    Haskell2010

benchmark suffix-bench-long
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             SuffixBenchLong.hs
  build-depends:       base
                     , morphism-zoo
                     , criterion
  if flag(llvm)
    ghc-options:       -fllvm -optlo-O3 -O3
  ghc-options:         -O2 
  default-language:    Haskell2010

benchmark fib-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             FibBench.hs
  build-depends:       base
                     , morphism-zoo
                     , criterion
  ghc-options:         -O2
  default-language:    Haskell2010

benchmark pm-bench
  type:                exitcode-stdio-1.0
  hs-source-dirs:      bench
  main-is:             PlusMinusBench.hs
  build-depends:       base
                     , morphism-zoo
                     , criterion
  ghc-options:         -O2
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/vmchale/morphism-zoo
